    any package). Closes: #492247
  * check-missing-firmware: Add a 1 second sleep before reading the missing
    firmware log, just in case a module delays requesting firmware
    until after modprobe returns, resulting in the log not being written in
    time. (No such modules currently known.)
  * hw-detect: Fix syntax error in code added for #472487.

 -- Frans Pop <fjp@debian.org>  Wed, 23 Jul 2008 19:54:37 +0200

hw-detect (1.64) unstable; urgency=low

  * floppy-retriever renamed to media-retriever.
  * Change wording of question since drivers can now be loaded from other
    media than floppies.
  * Add a modified copy of udev's firmware.agent, that records to
    /tmp/missing-firmware.
  * Add check-missing-firmware.
  * Add a post-base-installer hook to install firmware into /target.
    Closes: #487228
  * If firmware debs are installed, default apt-setup to using non-free.
    This is so that apt can upgrade those debs.
  * RM note: udev-udeb 0.124-1 has dropped the firmware.agent, so needs
    this version of hw-detect. This version of hw-detect will work with
    older versions of udev-udeb, although it will be indetermanate whether the
    missing firmware detection works.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 13:50:33 -0400

hw-detect (1.63) unstable; urgency=low

  [ Colin Watson, Frans Pop ]
  * The esp module is now called esp_scsi. linux-kernel-di-sparc-2.6 was
    updated last October, but sbus.list wasn't updated to match.
    Turns out the corrent module to load is sun_esp, not esp_scsi which is
    only a mid-level module. See #485961.

  [ Updated translations ]
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Korean (ko.po) by Changwoo Ryu
  * Russian (ru.po) by Yuri Kozlov

 -- Frans Pop <fjp@debian.org>  Tue, 17 Jun 2008 14:08:02 +0200

hw-detect (1.62) unstable; urgency=low

  [ Updated translations ]
  * Marathi (mr.po) by Sampada
  * Punjabi (Gurmukhi) (pa.po) by Amanpreet Singh Alam
