@@ -33,6 +33,7 @@ hw-detect (1.65) UNRELEASED; urgency=low
     until after modprobe returns, resulting in the log not being written in
     time. (No such modules currently known.)
   * hw-detect: Fix syntax error in code added for #472487.
+  * Add test for syntax errors in scripts to build process.
 
  -- Frans Pop <fjp@debian.org>  Wed, 23 Jul 2008 19:54:37 +0200
 
